--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jane Smith's Profile</title>
+  <title>Leanne Werner's Profile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
@@ -10,23 +10,23 @@
 
     <div class="main-nav">
         <ul class="nav">
-          <li class="name">Jane Smith</li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Experience</a></li>
+          <li class="name">Leanne Werner</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/me.png" alt="Drawing of Jane Smith" class="profile-image">
-      <h1 class="tag name">Hello, I’m Jane.</h1>
-      <p class="tag location">My home is Portland, Oregon.</p>
+      <img src="images/mephoto.jpg" alt="Photo of Leanne Pepper Werner" class="profile-image">
+      <h1 class="tag name">Hello, I’m Leanne.</h1>
+      <p class="tag location">My home is San Diego, California.</p>
     </header>
 
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I've lived in lots of different places and have worked in lots of different jobs. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a professional cook and gardener and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m an aspiring web designer who loves everything about the web. My background in mathematics has given me a great appreciation for computer logic and programming. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’ve been a calculus tutor and dog trainer and am a life-long learner who's always interested in expanding my skills.</p>
       </div> 
 
       <div class="card">
@@ -36,20 +36,29 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>Ruby</li>
-          <li>Rails</li>
+          <li>React</li>
         </ul>
         <p>I’d like to work for a web design firm helping clients create an impressive online presence.</p>
       </div> 
+      <div class="card">
+        <h2>Hobbies</h2>
+        <p>When I'm not actively working on my love of code, I'm usually doing one of the following:</p>
+        <ul class="hobbies">
+          <li>Teaching my new puppy all kinds of tricks 🐕 </li>
+          <li>Jogging 🏃‍♀️</li>
+          <li>Baking 🍪</li>
+          <li>Attempting to keep my garden alive and green 🌿</li>
+        </ul>
+      </div>
 
     </main>
     <footer>
       <ul>
-        <li><a href="#" class="social twitter">Twitter</a></li>
-        <li><a href="#" class="social linkedin">LinkedIn</a></li>
-        <li><a href="#" class="social github">Github</a></li>
+        <li><a href="https://twitter.com/leannepepper1" class="social twitter">Twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/leanne-werner-19813a121/" class="social linkedin">LinkedIn</a></li>
+        <li><a href="https://github.com/leannepepper" class="social github">Github</a></li>
       </ul>
-      <p class="copyright">Copyright 2015, Jane Smith</p>
+      <p class="copyright">Copyright 2015, Leanne Werner</p>
     </footer>
   </body>
   </html>
