added small projects link and changed HTML

--- a/experience.html
+++ b/experience.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="https://codepen.io/LeannePepper/pen/BvWxgB">Modal</a>
                     </li>
+                    <li>
+                         <a href="https://codepen.io/LeannePepper/pen/aQMbpX">Hamburger</a>
+                    </li>
                 </ul>
             </div>
             <div class="card">
