--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. My background in mathematics has given me a great appreciation for computer logic and programming. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I’ve been a calculus tutor and dog trainer and am a life-long learner who's always interested in expanding my skills.</p>
+        <p>I’m an aspiring web developer who loves all things JavaScript. My background in mathematics has given me a great appreciation for computer logic and programming. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
+        <p>I’ve been a calculus tutor and dog trainer and am a life-long learner who's dedicated to teaching and building projects.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to master the process of building accesible and responsive web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
